// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors Error 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting Node package manifest [started]
[HH:mm:ss] Getting Node package manifest [failed]
[HH:mm:ss] → Invalid comparator: !@#
[HH:mm:ss] Getting manifests [failed]
[HH:mm:ss] → Invalid comparator: !@#
`;

exports[`errors StandardError 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting Node package manifest [started]
[HH:mm:ss] Getting Node package manifest [failed]
[HH:mm:ss] → Failed to parse <cwd>/test/__fixtures__/empty-package-json/package.json
[HH:mm:ss] Getting manifests [failed]
[HH:mm:ss] → Failed to parse <cwd>/test/__fixtures__/empty-package-json/package.json
`;

exports[`github-action 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting manifests [completed]
[HH:mm:ss] Creating bundle from GitHub Action manifest [started]
[HH:mm:ss] Creating bundle from GitHub Action manifest [completed]
`;

exports[`node-basic 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting Node package manifest [started]
[HH:mm:ss] Getting Node package manifest [completed]
[HH:mm:ss] Getting manifests [completed]
[HH:mm:ss] Creating bundles from Node package manifest [started]
[HH:mm:ss] Creating CommonJS output [started]
[HH:mm:ss] Creating CommonJS output [completed]
[HH:mm:ss] Creating bundles from Node package manifest [completed]
`;

exports[`node-dependencies 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting Node package manifest [started]
[HH:mm:ss] Getting Node package manifest [completed]
[HH:mm:ss] Getting manifests [completed]
[HH:mm:ss] Creating bundles from Node package manifest [started]
[HH:mm:ss] Creating CommonJS output [started]
[HH:mm:ss] Creating CommonJS output [completed]
[HH:mm:ss] Creating bundles from Node package manifest [completed]
`;

exports[`node-version 1`] = `
[HH:mm:ss] Getting manifests [started]
[HH:mm:ss] Getting GitHub Action manifest [started]
[HH:mm:ss] Getting GitHub Action manifest [completed]
[HH:mm:ss] Getting Node package manifest [started]
[HH:mm:ss] Getting Node package manifest [completed]
[HH:mm:ss] Getting manifests [completed]
[HH:mm:ss] Creating bundles from Node package manifest [started]
[HH:mm:ss] Creating CommonJS output [started]
[HH:mm:ss] Creating CommonJS output [completed]
[HH:mm:ss] Creating bundles from Node package manifest [completed]
`;
